# portfolio_volodymyr_constructor_company

./: .gitignore  README.md  main-key.pem
backend/: .env  Cargo.toml  api.txt  askama.toml  docker-compose.yml  gen_cert.sh  sea-orm-cli.toml  tmp.json
backend/certs/: cert.pem  key.pem
backend/db_data/: postmaster.pid
backend/db_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
backend/db_data/base/16384/: 1247  1249  1259  16385  16389  16390  16392  16393  16394  16396  16397  16398  16399  16401  16402  16403  16405  16406  16408  16409  16410  16412  16413  16414  16415  16418  16419  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  (+12 more)
backend/db_data/base/5/: pg_internal.init
backend/db_data/global/: 1260  1262  2671  pg_control  pg_internal.init
backend/db_data/pg_stat/: pgstat.stat
backend/migration/: Cargo.toml
backend/migration/migration/src/: lib.rs
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_user_table_create.rs  m20220101_000001_visitors_table_create.rs  m20240526_233614_projects.rs  m20240528_022228_projects.rs
backend/src/: common.rs  countrie.rs  lib.rs  main.rs  pic_info.rs  state.rs  util.rs  visitor.rs
backend/src/admin/: auth.rs  mod.rs  project_create.rs  project_delete.rs  project_update.rs  register.rs  verify.rs  visitor.rs
backend/src/admin/projects/: create.rs  delete.rs  mod.rs  pic_info.rs  update.rs  upload.rs  util.rs
backend/src/entities/: mod.rs  prelude.rs  projects.rs  user.rs  users.rs  visitor.rs
backend/src/templates/: mod.rs
backend/src/visitor/: create.rs  home.rs  mod.rs  projects.rs  validate.rs
frontend/AuthPage/: auth.css  auth.html
frontend/HomePage/: contact.css  footer.css  header.css  hero.css  index.html  skillset.css  styles.css  testimonials.css
frontend/ProjectAddition/: addition.css  addition.html  project_addition.css  project_addition.js
frontend/ProjectUpdate/: update_project.html
frontend/ProjectsPage/: projects.css  projects.html  projects.js
frontend/home/: contact.css  experiance.css  folder-inside.css  index.html
frontend/new_home/: index.css  index.html
frontend/projects/: project_list.html  projects.html
frontend_admin/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
frontend_admin/lib/: main.dart
frontend_admin/rest/: api_constants.dart
frontend_admin/web/: index.html
frontend_v1/AuthPage/: auth.html
frontend_v1/ProjectAddition/: addition.html
frontend_v1/ProjectUpdate/: update_project.html  update_project_style.css
frontend_v1/admin/: admin.js  admin_page.html
frontend_v1/home/: header.css  skillset.css
frontend_visitor/: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
frontend_visitor_page/: .flutter-plugins
(+115 files in other folders)
