[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = "0.7.5"
cargo-watch = "8.5.2"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", features = ["json"] }
rexiv2 = "0.10.0"
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }

