[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
axum = {version = "0.7.5", features = ["multipart"]}
bcrypt = "0.15.1"
cargo-watch = "8.5.2"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
lazy_static = "1.4.0"
nestify = "0.3.3"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
rexiv2 = "0.10.0"
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "limit"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = {version = "1.8.0", features = ["v4"]}
jsonwebtoken = "9.3.0"
rand = "0.8.5"
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
tower-cookies = "0.10.0"

[dependencies.sea-orm-migration]
version = "0.12.15"
features = ["runtime-tokio-rustls", "sqlx-postgres"]




